--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.5",
     "angularx-flatpickr": "^6.6.0",
     "file-saver": "^2.0.5",
     "jasmine-core": "~3.8.0",
